# arrg

./: .gitignore  README.md  check_requirements.py  main.py  prd.md  pyproject.toml  test_integration.py
arrg/: __init__.py  __main__.py
arrg/a2a/: __init__.py  agent_card.py  artifact.py  message.py  task.py
arrg/agents/: __init__.py  analysis.py  base.py  planning.py  qa.py  research.py  writing.py
arrg/core/: __init__.py  orchestrator.py
arrg/mcp/: __init__.py  client.py  schema.py  server.py  tools.py
arrg/protocol/: __init__.py  message.py  workspace.py
arrg/ui/: dashboard.py
arrg/utils/: __init__.py  llm_client.py
example_reports/AI_healthcare/: arrg_log_20260211_163941.txt
example_reports/Mobile_phones_K12/: arrg_log_20260211_202909.txt
