[project]
name = "arrg"
version = "0.1.0"
description = "Automated Research Report Generator - Multi-agent system for research and report generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "reportlab>=4.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
[tool.setuptools.packages.find]
include = ["arrg*"]  # Only include packages starting with 'arrg'
exclude = ["logs*", "workspace*", "test_workspace*"]  # Explicitly ignore these
